# ai-scrummaster

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.sh
.github/workflows/: ci.yml  maintenance.yml  release.yml
docs/superpowers/plans/: 2026-04-05-milestone-1-plan.md
docs/superpowers/specs/: 2026-04-05-milestone-1-design.md
policies/: rules.yaml
src/: config.py  crew.py  main.py  sanitizer.py  webhook_router.py
src/agents/: action.py  dedup.py  devsecops.py  maintenance.py  standup.py  story_decomposer.py  story_writer.py  triage.py
src/checks/: dependencies.py  owasp.py  policy.py  secrets.py  staleness.py
src/schemas/: dedup.py  findings.py  story.py  triage.py
src/tools/: github_api.py  github_mcp.py
tests/: conftest.py  test_crew_helpers.py  test_integration.py  test_sanitizer.py  test_schemas.py
tests/test_agents/: test_action.py  test_devsecops.py  test_maintenance.py  test_standup.py  test_story_decomposer.py  test_triage.py
tests/test_checks/: test_dependencies.py  test_owasp.py  test_policy.py  test_secrets.py  test_staleness.py
tests/test_tools/: test_github_api.py  test_github_mcp.py
